wwwroot/assets/css/style.css
/* ... */
.copyright-area .copyright-left .logo img.dark-logo {
  display: block;
}

.copyright-area .copyright-left .logo img.light-logo {
  display: none;
}

/* -----------------------------
    Theme Dark Version Styles  
--------------------------------*/
body.active-dark-mode {
  color: #ffffff;
  background: #212121;
}
body.active-dark-mode .axil-header {
  background: #1A1A1A;
}
body.active-dark-mode .bg-color-grey {
  background: #212121;
}
body.active-dark-mode .bg-color-white {
  background: #1A1A1A;
}
body.active-dark-mode .bg-color-extra03 {
  background: #1A1A1A;
}
body.active-dark-mode h1,
body.active-dark-mode h2,
body.active-dark-mode h3,
body.active-dark-mode h4,
body.active-dark-mode h5,
body.active-dark-mode h6 {
  color: #ffffff;
}
body.active-dark-mode a {
  color: #ffffff;
}

/* Elements  */
body.active-dark-mode ul.social-with-text li a i {
  background: #212121;
  color: #878787;
}

body.active-dark-mode ul.social-with-text li a span {
  color: #ffffff;
}

body.active-dark-mode ul.social-icon li a {
  background: #333333;
  color: #65676B;
}

body.active-dark-mode p {
  color: #c7c5c5;
}

body.active-dark-mode figure figcaption {
  color: #c7c5c5;
}

body.active-dark-mode .form-group input {
  background-color: #242424;
  color: #ffffff;
}

body.active-dark-mode ul li {
  color: #878787;
}

body.active-dark-mode .axil-header.header-style-3 .header-top .social-share-transparent li a {
  color: #878787;
}

/*--------------------
 Header Area  
----------------------*/
body.active-dark-mode .axil-search.form-group input {
  background: #242424;
  color: #ffffff;
}

body.active-dark-mode button.search-button i {
  color: #ffffff;
}

body.active-dark-mode .mainmenu-nav ul.mainmenu > li > a {
  color: #9F9F9F;
}

body.active-dark-mode .mainmenu-nav ul.mainmenu > li:hover > a {
  color: var(--color-primary);
}

body.active-dark-mode .metabar-block li.icon a {
  background: #242424;
  color: #ffffff;
}

body.active-dark-mode .axil-header .logo a img.light-logo {
  display: inline-block;
}

body.active-dark-mode .axil-header .logo a img.dark-logo {
  display: none;
}

body.active-dark-mode .axil-footer-style-1.footer-variation-2 .footer-top::before,
body.active-dark-mode .axil-footer-style-1.footer-variation-2 .footer-top::after {
  background: #333333;
}

/* Slider Style One  */
body.active-dark-mode .axil-slide.slider-style-1 .content-block .post-content {
  background: #1A1A1A;
}

/*------------------------
    Post Content  
-------------------------*/
body.active-dark-mode .content-block.post-horizontal {
  border-color: #1A1A1A;
}

body.active-dark-mode .content-block.content-direction-column.is-active {
  background: #1A1A1A;
}

body.active-dark-mode .content-block .post-meta .hover-flip-item span::before {
  color: #ffffff;
}

body.active-dark-mode ul.post-meta-list li {
  color: #878787;
}

body.active-dark-mode ul.axil-tab-button .nav-item a.nav-link {
  color: #65676B;
  background: transparent;
  border: 1px solid #050505;
}

body.active-dark-mode ul.axil-tab-button .nav-item a.nav-link.active {
  border: 1px solid #050505;
  color: #878787;
  background: #050505;
}

body.active-dark-mode .content-block.modern-post-style {
  background: #212121;
}

body.active-dark-mode .content-block.post-order-list .post-inner .post-order-list {
  color: #ffffff;
}

body.active-dark-mode ul.social-share-transparent li a {
  color: #65676B;
}

body.active-dark-mode .content-block.trend-post {
  border-bottom: 1px solid #212121;
}

body.active-dark-mode .content-block.post-grid .post-grid-content .post-content {
  background: #1A1A1A;
}

body.active-dark-mode .content-block.post-list-view .post-content {
  border: 1px solid #050505;
}

body.active-dark-mode .content-block.post-list-view.is-active .post-content,
body.active-dark-mode .content-block.post-list-view:hover .post-content {
  background: #212121;
  border: 1px solid #212121;
}

body.active-dark-mode .content-block.modern-post-style .post-thumbnail::before {
  background: url(../images/icons/shape-02.png);
}

/*-------------------
    BLog Sidebar  
--------------------*/
body.active-dark-mode .axil-single-widget {
  background: #181818;
}

body.active-dark-mode .axil-single-widget.widget_categories ul li.cat-item .inner {
  background: #181818;
}

body.active-dark-mode .axil-single-widget.widget_categories ul li.cat-item .inner .content .title {
  color: #878787;
}

body.active-dark-mode .axil-single-widget.widget_categories {
  background: transparent !important;
}

/*-------------------------
    Slick Slider   
--------------------------*/
body.active-dark-mode .axil-slick-arrow .slide-arrow {
  background: #050505;
  border: 1px solid #050505;
}

body.active-dark-mode .axil-slick-arrow .slide-arrow i {
  color: #878787;
}

body.active-dark-mode .axil-slick-arrow .slide-arrow:hover {
  background: #050505;
  border: 1px solid #050505;
  color: var(--color-primary);
}

body.active-dark-mode .slider-activation.axil-slick-arrow .slide-arrow {
  background: transparent;
  border: 1px solid #050505;
}

body.active-dark-mode .slider-activation.axil-slick-arrow .slide-arrow:hover {
  background: #050505;
  border: 1px solid #050505;
}

body.active-dark-mode .slider-activation.axil-slick-arrow .slide-arrow i {
  color: #050505;
}

body.active-dark-mode .slider-activation.axil-slick-arrow .slide-arrow:hover i {
  color: var(--color-primary);
}

/*-----------------------
    Footer Style  
-------------------------*/
body.active-dark-mode .axil-footer-style-1 {
  background: #111111;
}

body.active-dark-mode .footer-mainmenu .footer-widget .title {
  color: #FFFFFF;
}

body.active-dark-mode .footer-mainmenu .footer-widget ul.ft-menu-list li a {
  color: #878787;
}

body.active-dark-mode .axil-footer-style-1.footer-variation-2 .logo img.dark-logo {
  display: none;
}

body.active-dark-mode .axil-footer-style-1.footer-variation-2 .logo img.white-logo {
  display: block;
}
/* ... */

